@startuml PySyDy Class Diagram

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam classBackgroundColor LightBlue
skinparam classBorderColor DarkBlue
skinparam arrowColor DarkBlue
skinparam packageBackgroundColor LightGray

package "PySyDy" {
    class Stock {
        + name: str
        + value: float
        + inflows: list
        + outflows: list
        + __init__(name: str, initial_value: float = 0.0)
        + add_inflow(flow: Flow)
        + add_outflow(flow: Flow)
        + update(timestep: float)
        + get_value(): float
        + __str__(): str
    }
    
    class Flow {
        + name: str
        + source_stock: Stock
        + target_stock: Stock
        + rate_function: callable
        + rate: float
        + __init__(name: str, source_stock: Stock, target_stock: Stock, rate_function: callable)
        + calculate_rate(system_state: dict)
        + get_rate(): float
        + __str__(): str
    }
    
    class Auxiliary {
        + name: str
        + calculation_function: callable
        + inputs: list
        + value: Any
        + __init__(name: str, calculation_function: callable, inputs: list = None)
        + calculate_value(system_state: dict)
        + get_value(): Any
        + __str__(): str
    }
    
    class Parameter {
        + name: str
        + value: float
        + units: str
        + description: str
        + __init__(name: str, value: float, units: str = None, description: str = None)
        + get_value(): float
        + __str__(): str
    }
    
    class Simulation {
        + stocks: list
        + flows: list
        + auxiliaries: list
        + parameters: list
        + timestep: float
        + time: float
        + history: list
        + __init__(stocks: list, flows: list, auxiliaries: list, parameters: list, timestep: float = 1.0)
        + step()
        + _get_system_state(): dict
        + _record_state()
        + get_results(): DataFrame
        + run(duration: float)
    }
    
    Stock "1" o-- "*" Flow : has inflows/outflows >
    Flow "*" --> "0..1" Stock : source >
    Flow "*" --> "0..1" Stock : target >
    Simulation "1" *-- "*" Stock : contains >
    Simulation "1" *-- "*" Flow : contains >
    Simulation "1" *-- "*" Auxiliary : contains >
    Simulation "1" *-- "*" Parameter : contains >
}

@enduml